--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>WebDev Final</title>
 </head>
 <body>
+    <p>this is a box</p>
     <div id="box0" class="box">Box0</div>
 </body>
 </html>
