--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>this is a box</p>
+    <p>This was edited from VS Code</p>
     <div id="box0" class="box">Box0</div>
 </body>
 </html>
