--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p>this is a box</p>
     <div id="box0" class="box">Box0</div>
+    <div id="box1" class="box">Box1</div>
 </body>
 </html>
