--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WebDev Final</title>
 </head>
 <body>
-    <p>this is a box</p>
+    <p>this was a box</p>
     <p>This was edited from VS Code</p>
     <div id="box0" class="box">Box0</div>
     <div id="box1" class="box">Box1</div>
