--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>WebDev Final</title>
 </head>
 <body>
-    <p>this was a box</p>
-    <p>This was edited from VS Code</p>
+    <h1>Home</h1>
+    <h3>Photon Margarin Cutlass</h3>
+    <p>A knife designed to toast bread while cutting or 
+        applying butter.</p>
     <div id="box0" class="box">Box0</div>
     <div id="box1" class="box">Box1</div>
 </body>
