--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebDev Final</title>
+    <title>Home</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <a href="about.html"><li>Home</li></a>
+            <a href="about.html"><li>About Us</li></a>
+            <a href="specs.html"><li>Product Specs</li></a>
+            <a href="contact.html"><li>Contact Us</li></a>
+        </ul>
+    </nav>
     <h1>Home</h1>
     <h3>Photon Margarin Cutlass</h3>
     <p>A knife designed to toast bread while cutting or 
