just added the nav into the htmls

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+
+<nav>
+    <ul>
+    <a href="about.html"><li>Home</li></a>
+    <a href="index.html"><li>Intrest</li></a>
+    <a href="specs.html"><li>Favrouits Pages</li></a>
+    </ul>
+</nav>
 <body>
     
 </body>
