--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebDev Final</title>
 </head>
+
+<nav>
+    <ul>
+    <a href="about.html"><li>Home</li></a>
+    <a href="contact.html"><li>Intrest</li></a>
+    <a href="specs.html"><li>Favrouits Pages</li></a>
+    </ul>
+</nav>
 <body>
     <h1>Home</h1>
     <h3>Photon Margarin Cutlass(By Four Star)</h3>
