--- a/specs.html
+++ b/specs.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Specs</title>
+    <link rel ="icon" href="Four_Star_Products_alpha.png">
+    <title>Four Star LLC</title>
 </head>
 <body>
+    <h1>Product Specs</h1>
     <nav>
         <ul>
-            <a href="about.html"><li>Home</li></a>
+            <a href="index.html"><li>Home</li></a>
             <a href="about.html"><li>About Us</li></a>
             <a href="specs.html"><li>Product Specs</li></a>
             <a href="contact.html"><li>Contact Us</li></a>
