Fixing up the style page and added some stuff to the home and specs

--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
 </head>
 
-<nav>
-    <ul>
-    <a href="about.html"><li>Home</li></a>
-    <a href="contact.html"><li>Intrest</li></a>
-    <a href="specs.html"><li>Favrouits Pages</li></a>
-    </ul>
-</nav>
 <body>
     <h1>Home</h1>
+    <img  id="ThePic" src="Four_Star_Products_alpha.png"/>
     <nav>
         <ul>
             <a href="index.html"><li>Home</li></a>
@@ -26,7 +20,6 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
-    <h1>Home</h1>
     <h3>Photon Margarin Cutlass(By Four Star)</h3>
     <p>A knife designed to toast bread while cutting or 
         applying butter.</p>
