--- a/specs.html
+++ b/specs.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
-    <title>Product Specs</title>
-=======
     <link rel ="icon" href="Four_Star_Products_alpha.png">
+    <link href="style.css" rel="stylesheet">
     <title>Four Star LLC</title>
 </head>
-<body>
->>>>>>> 6592779acc22afb5a17b630c81cd640e4aa60869
-</head>
+
 <body>
     <h1>Product Specs</h1>
     <nav>
@@ -24,5 +18,6 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <img src="Drawing (1).png"
 </body>
 </html>
