--- a/about.html
+++ b/about.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
-    <title>About Us</title>
-=======
-    <link rel ="icon" href="Four_Star_Products_alpha.png">
+    <link rel ="icon" href="images\Four_Star_Products_alpha.png">
     <title>Four Star LLC</title>
->>>>>>> 6592779acc22afb5a17b630c81cd640e4aa60869
 </head>
 <body>
     <h1>About Us</h1>
