--- a/contact.html
+++ b/contact.html
@@ -24,5 +24,8 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <p>Address: 672 Cyclops Ln, WC</p>
+    <p>Phone: 1-800-513-8008</p>
+    <script src="script.js">bup</script>
 </body>
 </html>
