--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
-    <link rel ="icon" href="images\Four_Star_Products_alpha.png">
+    <link rel ="icon" href="images/Four_Star_Products_alpha.png">
     <title>Four Star LLC</title>
 </head>
 <body>
     <h1>Home</h1>
-    <img  id="ThePic" src="Four_Star_Products_alpha.png"/>
+    <img  id="ThePic" src="images/Four_Star_Products_alpha.png"/>
     <nav>
         <ul>
             <a href="index.html"><li>Home</li></a>
@@ -23,7 +23,7 @@
     <p>A knife designed to toast bread while cutting or 
         applying butter.</p>
     <div id="image_slideshow">
-        <img src="images\Four_Star_Products_alpha.png">
+        <img src="images/Four_Star_Products_alpha.png">
     </div>
     <div id="box0" class="box">Box0</div>
     <div id="box1" class="box">Box1</div>
