--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
-    <link rel ="icon" href="images\Four_Star_Products_alpha.png">
+    <link rel ="icon" href="images/Four_Star_Products_alpha.png">
     <title>Four Star LLC</title>
 </head>
 <body>
