--- a/specs.html
+++ b/specs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
-    <link rel ="icon" href="images\Four_Star_Products_alpha.png">
+    <link rel ="icon" href="images/Four_Star_Products_alpha.png">
     <title>Four Star LLC</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
-    <img src="Drawing (1).png">
+    <img src="images/product1.png">
 </body>
 </html>
