--- a/about.html
+++ b/about.html
@@ -17,5 +17,8 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <p>When we first started our company, we made it our goal to create products
+        thatmake life just that much easier
+    </p>
 </body>
 </html>
