added js folder with file for each page

--- a/about.html
+++ b/about.html
@@ -21,5 +21,6 @@
     <p>When we first started our company, we made it our goal to create products
         thatmake life just that much easier
     </p>
+    <script src="scripts/about_script.js"></script>
 </body>
 </html>
