--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,6 @@
     </nav>
     <p>Address: 672 Cyclops Ln, WC</p>
     <p>Phone: 1-800-513-8008</p>
-    <script src="script.js">bup</script>
+    <script src="scripts/contact_script.js"></script>
 </body>
 </html>
