--- a/specs.html
+++ b/specs.html
@@ -19,5 +19,6 @@
         </ul>
     </nav>
     <img src="images/product1.png">
+    <script src="scripts/specs_script.js"></script>
 </body>
 </html>
