--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </div>
     <div id="box0" class="box">Box0</div>
     <div id="box1" class="box">Box1</div>
-    <script src="script.js"></script>
+    <script src="scripts/home_script.js"></script>
 </body>
 </html>
