--- a/about.html
+++ b/about.html
@@ -18,8 +18,10 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
-    <p>When we first started our company, we made it our goal to create products
-        thatmake life just that much easier
+    <p>From the beginning, we made it our mission at Four Star LLC to create a wide variety of products that would make life easier for 
+        everyone, and we have maintained that mission ever sinse we started all those days ago.  And we have succeeded in the face of 
+        adversity and delivered what we said we would, including but not limited to: the Photon Margarin Cutlass.  It is our hope that 
+        many weeks from now we will continue to deliver on our promise, and continue to make Four Star products.
     </p>
 </body>
 </html>
