--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <p>Do you have any questions?  Feel free to call the number below, and let us know!</p>
     <p>Address: 672 Cyclops Ln, WC</p>
     <p>Phone: 1-800-513-8008</p>
     <script src="scripts/contact_script.js"></script>
