--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <p>Welcome to the Four Star official website!  From here, you can learn more about us and our products, or contact us if you 
+        have any additional inqueries.  please, enjoy your stay.
+    </p>
     <h3>Photon Margarin Cutlass(By Four Star)</h3>
     <p>A knife designed to toast bread while cutting or 
         applying butter.</p>
