--- a/specs.html
+++ b/specs.html
@@ -18,6 +18,7 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <p>This is the product specs page.  Here you can take a look at a breakdown of our various product</p>
     <img src="images/product1.png">
     <script src="scripts/specs_script.js"></script>
 </body>
