--- a/about.html
+++ b/about.html
@@ -18,10 +18,11 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <canvas id="bar_graph" width="300" height="100"></canvas>
     <p>From the beginning, we made it our mission at Four Star LLC to create a wide variety of products that would make life easier for 
-        everyone, and we have maintained that mission ever sinse we started all those days ago.  And we have succeeded in the face of 
-        adversity and delivered what we said we would, including but not limited to: the Photon Margarin Cutlass.  It is our hope that 
-        many weeks from now we will continue to deliver on our promise, and continue to make Four Star products.
+        everyone, and we have maintained that mission ever sinse we started all those days ago. We have succeeded in the face of 
+        adversity and delivered what we said we would, including but not limited to: the Photon Margarin Cutlass. It is our hope that, 
+        many weeks from now, we will continue to deliver on our promise and continue to make Four Star products.
     </p>
     <script src="scripts/about_script.js"></script>
 </body>
