Updated bar graph and text-color

--- a/about.html
+++ b/about.html
@@ -18,7 +18,17 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
-    <canvas id="bar_graph" width="300" height="100"></canvas>
+    <div id="reviews_chart">
+        <h3>Customer Reviews</h3>
+        <ul id="brand_comp_list">
+            <li>Leading Brand</li>
+            <canvas id="leading_graph" width="300" height="20"></canvas>
+            <li>Other Brands</li>
+            <canvas id="other_graph" width="300" height="20"></canvas>
+            <li>Four Star&trade;</li>
+            <canvas id="four_star_graph" width="300" height="20"></canvas>
+        </ul>
+    </div>
     <p>From the beginning, we made it our mission at Four Star LLC to create a wide variety of products that would make life easier for 
         everyone, and we have maintained that mission ever sinse we started all those days ago. We have succeeded in the face of 
         adversity and delivered what we said we would, including but not limited to: the Photon Margarin Cutlass. It is our hope that, 
