--- a/specs.html
+++ b/specs.html
@@ -19,6 +19,9 @@
         </ul>
     </nav>
     <p>This is the product specs page.  Here you can take a look at a breakdown of our various product</p>
+    <div id='content1' class='box'>Heated Blade</div>
+    <div id='content2' class='box'>Padded Handle</div>
+    <div id='content3' class='box'>Activation Switch</div>
     <img src="images/product1.png">
     <script src="scripts/specs_script.js"></script>
 </body>
