--- a/specs.html
+++ b/specs.html
@@ -21,10 +21,38 @@
     <p>This is the product specs page.  Here you can take a look at a breakdown of our various product</p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="scripts/specs_script.js"></script>
-    <div id='content1' class='box'>Heated Blade:  A stainless steel blade makes use of electric coils to bring the heat</div> 
-    <div id='content2' class='box'>Padded Handle:  a luxurious wool padding helps keep your hands warm</div>
-    <div id='content3' class='box'>Activation Switch:  a buton located on the side of the handle activates the coils</div>
-    <img src="images/product1.png">
+    <th></th>
+    <table>
+        <tr id="row_0">
+            <td><div id='content1' class='box' class="spec_item"><strong>Thin Crystalline Structure</strong> - Stainless steel interior makes use of crystalline casing and photon coating, heating up surface</div></td>
+            <td><div id='content2' class='box' class="spec_item"><strong>Padded Handle</strong> - Luxurious wool padding helps keep your hands warm</div></td>
+        </tr>
+        <tr id="row_1">
+            <td><div id='content3' class='box' class="spec_item"><strong>Manual Activation</strong> - Switch located on the side of the handle activates the coils</div></td>
+            <td><div id='content4' class='box' class="spec_item"><strong>Foldable Design</strong> - Mechanism to fold for portability</div></td>
+        </tr>
+        <tr id="row_2">
+            <td><div id='content5' class='box' class="spec_item"><strong>Safety Lock</strong> - Light sensors prevent activation in dark places such as pockets</div></td>
+            <td><div id='content6' class='box' class="spec_item"><strong>Storage Tube</strong> - Holds liquidated margarin to apply to bread</div></td>
+        </tr>
+        <tr id="row_3">
+            <td><div id='content7' class='box' class="spec_item"><strong>Margarin Applicator</strong> - Hold in button on handle to release margarin</div></td>
+            <td><div id='content8' class='box' class="spec_item"><strong>Rechargable Battery</strong> - Stand firmly holds in place while charging</div></td>
+        </tr>
+        <tr id="row_4">
+            <td><div id='content9' class='box' class="spec_item"><strong>Replacement Tubes</strong> - Comes with three replacable storage tubes for quick refills</div></td>
+            <td><div id='content10' class='box' class="spec_item"><strong>Color Gems</strong> - Uses glass gravel stones to color photons as passed through</div></td>
+        </tr>
+        <tr id="row_5">
+            <td><div id='content11' class='box' class="spec_item"><strong>Temperature Dial</strong> - Small knob on bottom of handle to determine heating level</div></td>
+            <td><div id='content12' class='box' class="spec_item"><strong>Curved Edge</strong> - Precisely measured bezel for quality slicing action</div></td>
+        </tr>
+        <tr id="row_6">
+            <td><div id='content13' class='box' class="spec_item"><strong>Fully Modular</strong> - Easy to disassemble for cleaning and other purposes</div></td>
+            <td><div id='content14' class='box' class="spec_item"><strong>Avacado Stapler</strong> - Limited time offer of a free avacado stapler with purchase</div></td>
+        </tr>
+    </table>
+    <img src="images/product1.png" id="specs_main_image">
     
 </body>
 </html>
