--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>A knife designed to toast bread while cutting or 
         applying butter.</p>
     <div id="image_slideshow">
-        <img src="images/Four_Star_Products_alpha.png">
+        <img src="images/product1.png" id="ss_image">
     </div>
     <script src="scripts/home_script.js"></script>
 </body>
