--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,13 @@
             <a href="contact.html"><li>Contact Us</li></a>
         </ul>
     </nav>
+    <h2>Quote of the Day</h2>
+    <script type="text/javascript" src="https://theysaidso.com/gadgets/v3/theysaidso.js"></script>
+    <script>TheySaidSo.render({ quote_id : 'VsevE5h3LUUiZedYPKPwlweF'});</script>
+    <link href ="quote.JSON" rel="quote of the Day">
+    <h2>Contact Info</h2>
     <p>Do you have any questions?  Feel free to call the number below, and let us know!</p>
     <p>Address: 672 Cyclops Ln, WC</p>
     <p>Phone: 1-800-513-8008</p>
-    <script src="scripts/contact_script.js"></script>
 </body>
 </html>
