--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
         </ul>
     </nav>
     <h2>Quote of the Day</h2>
-    <script type="text/javascript" src="https://theysaidso.com/gadgets/v3/theysaidso.js"></script>
-    <script>TheySaidSo.render({ quote_id : 'VsevE5h3LUUiZedYPKPwlweF'});</script>
-    <link href ="quote.JSON" rel="quote of the Day">
+    <script type="text/javascript" src="https://theysaidso.com/gadgets/v3/theysaidso.js"></script> 
+    <div class="tso_blackcard"><script>TheySaidSo.render({ qod_category : 'inspire'});</script></div> 
+    <div class="light-text" style="text-decoration: none; color:#ccc; z-index: 999; text-align: right; padding-right: 20px; margin-top: 5px;"><a  style="text-decoration: none; color:#ccc;" title="Inspiring Quote of the day"  href="https://theysaidso.com/quote-of-the-day/inspire">They Said So</a></div>
     <h2>Contact Info</h2>
     <p>Do you have any questions?  Feel free to call the number below, and let us know!</p>
     <p>Address: 672 Cyclops Ln, WC</p>
